--- a/package.json
+++ b/package.json
@@ -25,11 +25,12 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node index.js"
   },
   "dependencies": {
     "body-parser": "^2.2.0",
     "express": "^5.1.0",
+    "mongoose": "^8.16.4",
     "morgan": "^1.10.0",
     "uuid": "^11.1.0"
   },
